moved pics to images folder.

--- a/annasite/index.html
+++ b/annasite/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Annan site</title>
-
+    <title>Eläinlääkäri, Anna Kjällman, Sipoo, Uusimaa</title>
+    <meta name="description" content="Eläinlääketieteen lisensiaatti eläinlääkäri Anna Kjällman hoitaa kaikki eläimen terveyteen liittyvät asiat. "
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
@@ -37,7 +37,7 @@
 	     </h3>
 	  </div>
 	  <div class="col-sm-5 hidden-xs">
-            <img class="img-circle" src="DSCF7542.JPG" alt="Animal" height="300" width="300" 
+            <img class="img-circle" src="images/DSCF7542.JPG" alt="Animal" height="300" width="300" 
 style="box-shadow: 5px 5px 5px 5px #888888;">
 	  </div>
         </div>
