--- a/annasite/index.html
+++ b/annasite/index.html
@@ -37,7 +37,7 @@
 	     </h3>
 	  </div>
 	  <div class="col-sm-5 hidden-xs">
-            <img class="img-circle" src="images/DSCF7542.JPG" alt="Animal" height="300" width="300" 
+            <img class="img-circle" src="images/panda.JPG" alt="Animal" height="300" width="300" 
 style="box-shadow: 5px 5px 5px 5px #888888;">
 	  </div>
         </div>
