--- a/annasite/index.html
+++ b/annasite/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Eläinlääkäri, Anna Kjällman, Sipoo, Uusimaa</title>
-    <meta name="description" content="Eläinlääketieteen lisensiaatti eläinlääkäri Anna Kjällman hoitaa kaikki eläimen terveyteen liittyvät asiat. "
+    <meta name="description" content="Eläinlääketieteen lisensiaatti eläinlääkäri Anna Kjällman hoitaa kaikki eläimen terveyteen liittyvät asiat. ">
+
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
