Added business areas to meta description.

--- a/annasite/index.html
+++ b/annasite/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Eläinlääkäri, Anna Kjällman, Sipoo, Uusimaa</title>
-    <meta name="description" content="Eläinlääketieteen lisensiaatti eläinlääkäri Anna Kjällman hoitaa kaikki eläimen terveyteen liittyvät asiat. ">
+    <meta name="description" content="Eläinlääketieteen lisensiaatti eläinlääkäri Anna Kjällman hoitaa kaikki eläimen terveyteen liittyvät asiat.
+        Toimialueen Uusimaa, pääkaupunkiseutu, Sipoo, Porvoo, Pornainen, Nurmijärvi, Helsinki, Vantaa, Espoo, Tuusula, Kerava, Järvenpää.
+        Eläinlääkäri Sipoo. Eläinlääkäri Porvoo. Eläinlääkäri Tuusula. Eläinlääkäri Kerava. Eläinlääkäri Pornainen. Eläinlääkäri Nurmijärvi. Eläinlääkäri Mäntsälä. Eläinlääkäri Vantaa.">
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.css" rel="stylesheet">
