--- a/annasite/index.html
+++ b/annasite/index.html
@@ -39,8 +39,7 @@
 	     </h3>
 	  </div>
 	  <div class="col-sm-6 hidden-xs">
-            <img class="img-circle" src="images/panda.JPG" alt="Animal" height="300" width="300" 
-style="box-shadow: 5px 5px 5px 5px #888888;">
+            <img class="img-rounded img-responsive" src="images/from-side2.JPG" alt="Animal" style="box-shadow: 5px 5px 5px 5px #888888;">
 	  </div>
         </div>
 
