New image for slide show.

--- a/annasite/index.html
+++ b/annasite/index.html
@@ -56,6 +56,8 @@
 	  <div class="col-sm-6 hidden-xs slide-show-container">
             <img class="img-rounded img-responsive" src="images/from-side2.JPG" alt="Animal" style="box-shadow: 5px 5px 5px 5px #888888; display:none;">
             <img class="img-rounded img-responsive" src="images/four-horses2.JPG" alt="Animal" style="box-shadow: 5px 5px 5px 5px #888888; display:none;">
+            <img class="img-rounded img-responsive" src="images/gallop2.png" alt="Animal" style="box-shadow: 5px 5px 5px 5px #888888; display:none;">
+
 	  </div>
         </div>
 
